TEST_PROGRAMS/INVALID/cecily_thomas/declaration_with_initialization.min
# Invalid MiniLang program (variable initialized at time of declaration)

var n = 10;

